--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,113 +1,26 @@
 # ============================================================================
-# LOCAL PROFILE - Connect to Remote Kafka for Testing
+# LOCAL PROFILE - Connect to Kafka for Local Testing
 # ============================================================================
 
-spring.application.name=consumer
+spring.application.name=streamingcandle
 server.port=8081
 
-# MongoDB Configuration (can be disabled for testing)
+# MongoDB Configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 spring.data.mongodb.auto-index-creation=true
 
 # ============================================================================
-# REMOTE KAFKA CONFIGURATION
+# KAFKA CONFIGURATION
 # ============================================================================
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.group-id=streamingcandle-local-test-group
-
-# Consumer deserializer
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.kotsin.consumer.model
-spring.kafka.consumer.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
-
-# Producer configuration
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-
-# CRITICAL FIX: Disable type headers to prevent ClassNotFoundException in consumers
-# This allows consumers to use their own class definitions without package conflicts
-spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 # ============================================================================
 # Kafka Streams Configuration - LOCAL TESTING
 # ============================================================================
-spring.kafka.streams.application-id=local-information-bars-test
-spring.kafka.streams.bootstrap-servers=localhost:9092
-spring.kafka.streams.client-id=streamingcandle-local
-spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
-spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
-spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
-spring.kafka.streams.properties.auto.offset.reset=earliest
-
-# CRITICAL: Use local state directory
+spring.kafka.streams.application-id=local-streamingcandle-test
 spring.kafka.streams.state-dir=/tmp/kafka-streams-local
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
-
-# Production reliability configurations
-spring.kafka.streams.properties.commit.interval.ms=100
-spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
-spring.kafka.streams.properties.session.timeout.ms=30000
-spring.kafka.streams.properties.heartbeat.interval.ms=3000
-spring.kafka.streams.properties.request.timeout.ms=40000
-spring.kafka.streams.properties.retry.backoff.ms=100
-spring.kafka.streams.properties.reconnect.backoff.ms=50
-
-# REAL-TIME OPTIMIZATION
-spring.kafka.streams.properties.linger.ms=5
-spring.kafka.streams.properties.batch.size=1024
-spring.kafka.streams.properties.buffer.memory=33554432
-
-spring.kafka.streams.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
-
-# ============================================================================
-# INFORMATION-DRIVEN BARS CONFIGURATION
-# ============================================================================
-information.bars.enabled=true
-
-# Multi-threshold approach (like 1min, 2min, 5min for time bars)
-information.bars.thresholds=1.0,2.0,5.0
-
-# VIB - Volume Imbalance Bars
-information.bars.vib.enabled=true
-information.bars.vib.min.ticks=10
-information.bars.vib.warmup.samples=20
-
-# DIB - Dollar Imbalance Bars  
-information.bars.dib.enabled=true
-information.bars.dib.min.ticks=10
-information.bars.dib.warmup.samples=20
-
-# TRB - Tick Runs Bars
-information.bars.trb.enabled=true
-information.bars.trb.min.ticks=10
-information.bars.trb.warmup.samples=20
-
-# VRB - Volume Runs Bars
-information.bars.vrb.enabled=true
-information.bars.vrb.min.ticks=10
-information.bars.vrb.warmup.samples=20
-
-# ============================================================================
-# MICROSTRUCTURE FEATURES CONFIGURATION
-# ============================================================================
-microstructure.enabled=true
-microstructure.input.topic=Orderbook
-microstructure.output.topic=microstructure-features
-microstructure.window.size=50
-microstructure.min.observations=20
-microstructure.emit.interval.ms=1000
-
-# EWMA parameters
-information.bars.ewma.span=100.0
-
-# Kafka topics (will produce to remote Kafka)
-information.bars.input.topic=forwardtesting-data
-information.bars.vib.output.topic=volume-imbalance-bars
-information.bars.dib.output.topic=dollar-imbalance-bars
-information.bars.trb.output.topic=tick-runs-bars
-information.bars.vrb.output.topic=volume-runs-bars
+spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # ============================================================================
 # LOGGING (Enhanced for testing)
