--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,15 +1,4 @@
-# Test profile for instrument family cache
+# Test profile
 spring.profiles.active=test
 
-# Disable scheduled tasks in tests
-instrument.cache.refresh.cron=
-
-# Use in-memory Redis for testing
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-
-# Mock API base URL for testing
-instrument.api.base.url=http://localhost:8080/mock-api
-
-# Reduce parallel threads for testing
-instrument.cache.parallel.threads=2
+# Minimal test configuration - most settings inherited from application.properties
