--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,8 +50,6 @@ spring.kafka.streams.properties.default.production.exception.handler=org.apache.
 # Producer timestamp type
 spring.kafka.streams.properties.producer.message.timestamp.type=CreateTime
 
-# Redis removed: in-memory cache only
-
 # ============================================================================
 # UNIFIED MARKET DATA PROCESSOR CONFIGURATION
 # ============================================================================
@@ -60,17 +58,12 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
 
-# ✅ P2-2 FIX: Windowing configuration (externalized from hardcoded values)
-# Grace period: how long to wait for late-arriving data after window closes
-# Trade-off: Higher grace = more complete data but higher latency
-# NOTE: 1m candles are delayed by this amount due to suppression until window closes.
-# Configure per-timeframe:
-# OPTIMIZED FOR LIVE DATA: Reduced from 5s/10s to 2s for low latency
+# Windowing configuration (grace period for late-arriving data)
+# OPTIMIZED FOR LIVE DATA: Low latency with 2s grace period
 candles.window.grace.seconds.1m=2
 candles.window.grace.seconds.multi=2
 
 # Testing: enable to process only a single instrument (by Token)
-# Enable processing for all instruments by default
 candles.filter.enabled=false
 candles.filter.token=123257
 
@@ -120,42 +113,8 @@ oi.scale.use.lots=false
 # MongoDB
 spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 
-# OHLC always updates from price ticks; volume updates only when trade volume exists
-
-# Intermediate topics (separate window aggregations per stream)
-stream.intermediate.ohlcv.1m=intermediate-ohlcv-1m
-stream.intermediate.ohlcv.2m=intermediate-ohlcv-2m
-stream.intermediate.ohlcv.3m=intermediate-ohlcv-3m
-stream.intermediate.ohlcv.5m=intermediate-ohlcv-5m
-stream.intermediate.ohlcv.15m=intermediate-ohlcv-15m
-stream.intermediate.ohlcv.30m=intermediate-ohlcv-30m
-
-stream.intermediate.orderbook.1m=intermediate-orderbook-1m
-stream.intermediate.orderbook.2m=intermediate-orderbook-2m
-stream.intermediate.orderbook.3m=intermediate-orderbook-3m
-stream.intermediate.orderbook.5m=intermediate-orderbook-5m
-stream.intermediate.orderbook.15m=intermediate-orderbook-15m
-stream.intermediate.orderbook.30m=intermediate-orderbook-30m
-
-stream.intermediate.oi.1m=intermediate-oi-1m
-stream.intermediate.oi.2m=intermediate-oi-2m
-stream.intermediate.oi.3m=intermediate-oi-3m
-stream.intermediate.oi.5m=intermediate-oi-5m
-stream.intermediate.oi.15m=intermediate-oi-15m
-stream.intermediate.oi.30m=intermediate-oi-30m
-
-# Finalized candle topics
-stream.outputs.candles.enabled=true
+# Used for validation only
 stream.outputs.candles.1m=candle-complete-1m
-stream.outputs.candles.2m=candle-complete-2m
-stream.outputs.candles.3m=candle-complete-3m
-stream.outputs.candles.5m=candle-complete-5m
-stream.outputs.candles.15m=candle-complete-15m
-stream.outputs.candles.30m=candle-complete-30m-v2
-
-
-# Family aggregation disabled; per-instrument streams only
-stream.outputs.familyStructured.enabled=false
 
 # ============================================================================
 # LOGGING CONFIGURATION (Issue #13 Fix)
@@ -170,7 +129,6 @@ logging.level.com.kotsin.consumer=INFO
 logging.level.org.apache.kafka.streams=WARN
 logging.level.org.springframework.kafka=WARN
 
-trading.hours.validation.enabled=false
 # DEBUG only for specific troubleshooting (comment out in production)
 # logging.level.com.kotsin.consumer.service.CandleEmissionService=DEBUG
 # logging.level.com.kotsin.consumer.service.InstrumentStateManager=DEBUG
