--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,71 +1,32 @@
 # Test Configuration for Streaming Candle Module
-# Uses remote Kafka broker for integration testing
 
-# Kafka Bootstrap Servers - Remote Broker
+# Kafka Configuration
 spring.kafka.bootstrap-servers=localhost:9092
 
 # Kafka Streams Configuration
 spring.kafka.streams.application-id=unified-market-processor2-test
 spring.kafka.streams.state-dir=/tmp/kafka-streams-test/streamingcandle
 spring.kafka.streams.properties.processing.guarantee=at_least_once
-spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.num.stream.threads=1
-
-# Consumer Configuration
-spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.group-id=streamingcandle-test
-spring.kafka.consumer.enable-auto-commit=false
-
-# Producer Configuration
-spring.kafka.producer.acks=1
-spring.kafka.producer.retries=3
 
 # Input topics
 unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
 
-# Output topics
-stream.outputs.candles.enabled=true
+# Output topics - Used for validation only
 stream.outputs.candles.1m=candle-complete-1m-test
-stream.outputs.candles.2m=candle-complete-2m-test
-stream.outputs.candles.3m=candle-complete-3m-test
-stream.outputs.candles.5m=candle-complete-5m-test
-stream.outputs.candles.15m=candle-complete-15m-test
-stream.outputs.candles.30m=candle-complete-30m-test
 
-# Family aggregation outputs
-stream.outputs.familyStructured.enabled=true
-stream.outputs.familyStructured.1m=family-structured-1m-test
-stream.outputs.familyStructured.2m=family-structured-2m-test
-stream.outputs.familyStructured.5m=family-structured-5m-test
-stream.outputs.familyStructured.15m=family-structured-15m-test
-stream.outputs.familyStructured.30m=family-structured-30m-test
-stream.outputs.familyStructured.all=family-structured-all-test
-
-# MongoDB Configuration (use test database or mock)
+# MongoDB Configuration
 spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion-test
 spring.data.mongodb.auto-index-creation=true
-
-# Microstructure Configuration
-microstructure.enabled=true
-microstructure.window.size=50
-microstructure.min.observations=20
-
-# Imbalance Bars Configuration
-information.bars.vib.enabled=true
-information.bars.vib.min.ticks=10
-information.bars.vib.warmup.samples=20
 
 # Logging Configuration for Tests
 logging.level.com.kotsin.consumer=INFO
 logging.level.org.apache.kafka.streams=WARN
 logging.level.org.springframework.kafka=WARN
 
-# Disable scheduled tasks during tests
+# Disable scheduled tasks and auto-start during tests
 spring.task.scheduling.enabled=false
-
-# Disable auto-start of Kafka Streams during tests
-kafka.streams.autostart=false
 spring.kafka.streams.auto-startup=false
 
