--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -16,17 +16,8 @@ unified.input.topic.ticks=forwardtesting-data-dev
 unified.input.topic.oi=OpenInterest-dev
 unified.input.topic.orderbook=Orderbook-dev
 
-# Output topics (Development)
-stream.outputs.candles.enabled=true
+# Output topics (Development) - Used for validation only
 stream.outputs.candles.1m=candle-complete-1m-dev
-stream.outputs.candles.2m=candle-complete-2m-dev
-stream.outputs.candles.5m=candle-complete-5m-dev
-stream.outputs.candles.15m=candle-complete-15m-dev
-stream.outputs.candles.30m=candle-complete-30m-dev
-
-# Family aggregation (Development)
-stream.outputs.familyStructured.enabled=false
-stream.outputs.familyStructured.1m=family-structured-1m-dev
 
 # MongoDB Configuration (Development)
 spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestionDev
@@ -35,24 +26,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestionDev
 logging.level.com.kotsin.consumer=DEBUG
 logging.level.org.apache.kafka.streams=INFO
 logging.level.org.springframework.kafka=INFO
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-# Trading Hours (Development)
+# Trading Hours (Development) - Used by ConfigurationValidator
 trading.hours.nse.start=09:15
 trading.hours.nse.end=15:30
-trading.hours.buffer.minutes=30
-
-# Backpressure (Development - More lenient)
-kafka.streams.backpressure.enabled=true
-kafka.streams.backpressure.max.poll.records=50
-kafka.streams.backpressure.lag.threshold=5000
-kafka.streams.backpressure.throttle.factor=0.7
-
-# Monitoring (Development)
-management.endpoints.web.exposure.include=health,metrics,info
-management.endpoint.health.show-details=always
-
-# Feature Flags (Development)
-features.circuit-breaker.enabled=true
-features.audit-logging.enabled=true
-features.performance-profiling.enabled=true
