--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,6 +117,146 @@ spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 stream.outputs.candles.1m=candle-complete-1m
 
 # ============================================================================
+# UNIFIED CANDLE PROCESSOR CONFIGURATION
+# ============================================================================
+unified.enabled=true
+unified.window.grace.seconds=10
+unified.input.candle.prefix=candle-ohlcv-
+unified.input.orderbook.prefix=orderbook-ohlv-
+unified.input.oi.prefix=oi-ohlv-
+unified.output.prefix=unified-candle-
+unified.timeframes=1m,2m,3m,5m,15m,30m
+
+# ============================================================================
+# VCP (Volume Cluster Pivot) CONFIGURATION
+# ============================================================================
+vcp.enabled=true
+vcp.input.prefix=unified-candle-
+vcp.output.signals.prefix=vcp-signals-
+vcp.output.combined=vcp-combined
+
+# Volume profile parameters
+vcp.price-bin-size=0.0005
+vcp.lookback-5m=48
+vcp.lookback-15m=32
+vcp.lookback-30m=24
+
+# Cluster detection
+vcp.min-cluster-strength=0.02
+vcp.max-clusters=5
+vcp.peak-threshold-sigma=0.5
+
+# Order book validation
+vcp.ob-validation-radius=0.005
+vcp.ob-validation-strong=1.5
+vcp.ob-validation-weak=0.5
+
+# OI adjustment
+vcp.oi-adjustment-cap=0.5
+vcp.oi-lookback=20
+
+# Proximity calculation
+vcp.proximity-decay-constant=0.005
+vcp.spread-factor-multiplier=10.0
+vcp.max-relevant-distance=0.02
+
+# Penetration difficulty (Kyle's Lambda)
+vcp.breakout-volume-fraction=0.3
+vcp.high-difficulty-atr-multiple=1.0
+
+# Multi-timeframe weights
+vcp.weight-5m=0.50
+vcp.weight-15m=0.30
+vcp.weight-30m=0.20
+
+# Scoring
+vcp.ofi-modifier-strength=0.2
+vcp.bias-epsilon=0.001
+vcp.atr-period=14
+vcp.default-atr-fraction=0.01
+
+# ============================================================================
+# IPU (Institutional Participation & Urgency) CONFIGURATION
+# ============================================================================
+ipu.enabled=true
+ipu.input.prefix=unified-candle-
+ipu.output.signals.prefix=ipu-signals-
+ipu.lookback=20
+
+# Volume parameters
+ipu.volume-sma-period=20
+ipu.volume-scale-factor=3.0
+
+# Price efficiency
+ipu.efficiency-wick-penalty-max=0.30
+
+# Order flow
+ipu.ofi-scale-factor=2.0
+ipu.depth-imbalance-threshold=0.5
+ipu.flow-agreement-bonus=1.3
+
+# Kyle's Lambda
+ipu.lambda-boost-max=0.3
+ipu.lambda-scale=0.5
+
+# Momentum
+ipu.momentum-lookback=3
+ipu.acceleration-threshold=0.25
+ipu.slope-clamp=1.0
+ipu.exhaustion-decline-threshold=0.8
+ipu.exhaustion-volume-decline=0.7
+ipu.exhaustion-wick-threshold=0.4
+
+# Urgency
+ipu.tick-density-scale=2.0
+ipu.momentum-atr-scale=1.5
+ipu.vol-acceleration-threshold=0.5
+ipu.accelerating-urgency-boost=1.15
+ipu.decelerating-urgency-penalty=0.90
+
+# X-Factor thresholds
+ipu.xfactor-vol-threshold=0.65
+ipu.xfactor-efficiency-threshold=0.35
+ipu.xfactor-flow-threshold=0.6
+ipu.xfactor-direction-threshold=0.75
+ipu.xfactor-momentum-threshold=0.5
+ipu.xfactor-oi-boost=1.2
+ipu.xfactor-oi-threshold=0.5
+
+# Final score modifiers
+ipu.momentum-modifier-strength=0.15
+ipu.urgency-modifier-strength=0.15
+ipu.xfactor-modifier-strength=0.25
+ipu.exhaustion-penalty-strength=0.20
+
+# Filters
+ipu.min-volume-threshold=1000
+ipu.min-depth-threshold=500
+ipu.opening-range-minutes=30
+ipu.news-spike-vol-threshold=8.0
+ipu.gap-threshold-atr=1.0
+
+# Multi-timeframe weights
+ipu.mtf-weight-5m=0.40
+ipu.mtf-weight-15m=0.35
+ipu.mtf-weight-30m=0.25
+
+# Direction voting weights
+ipu.price-direction-weight=1.0
+ipu.flow-direction-weight=1.0
+ipu.ofi-direction-weight=0.8
+ipu.depth-direction-weight=0.7
+ipu.momentum-direction-weight=1.2
+
+# ============================================================================
+# TRADING SIGNAL CONFIGURATION
+# ============================================================================
+trading.enabled=true
+trading.input.vcp=vcp-combined
+trading.input.ipu=ipu-signals-5m
+trading.output=trading-signals
+
+# ============================================================================
 # LOGGING CONFIGURATION (Issue #13 Fix)
 # ============================================================================
 # Root log level
