Fix topic prefixes to match actual producer topics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -122,8 +122,8 @@ stream.outputs.candles.1m=candle-complete-1m
 unified.enabled=true
 unified.window.grace.seconds=10
 unified.input.candle.prefix=candle-ohlcv-
-unified.input.orderbook.prefix=orderbook-ohlv-
-unified.input.oi.prefix=oi-ohlv-
+unified.input.orderbook.prefix=orderbook-signals-
+unified.input.oi.prefix=oi-metrics-
 unified.output.prefix=unified-candle-
 unified.timeframes=1m,2m,3m,5m,15m,30m
 
