--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serial
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
-# Offset reset - consume from latest (skip old problematic data)
+# Offset reset - consume from rdtest (skip old problematic data)
 spring.kafka.streams.properties.auto.offset.reset=latest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
@@ -57,6 +57,49 @@ spring.kafka.streams.properties.producer.message.timestamp.type=CreateTime
 unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
+
+# Output topics
+unified.output.topic.instrument=instrument-candle-1m
+
+# Unified Processor settings
+unified.window.grace.seconds=5
+unified.processor.enabled=true
+
+# ============================================================================
+# FAMILY CANDLE PROCESSOR CONFIGURATION
+# ============================================================================
+family.candle.window.grace.seconds=5
+family.candle.cache.ttl.hours=24
+family.cache.ttl.hours=24
+family.cache.refresh.on.miss=true
+
+# Family candle output topics (12 timeframes)
+family.output.topics.1m=family-candle-1m
+family.output.topics.2m=family-candle-2m
+family.output.topics.3m=family-candle-3m
+family.output.topics.5m=family-candle-5m
+family.output.topics.15m=family-candle-15m
+family.output.topics.30m=family-candle-30m
+family.output.topics.1h=family-candle-1h
+family.output.topics.2h=family-candle-2h
+family.output.topics.4h=family-candle-4h
+family.output.topics.1d=family-candle-1d
+family.output.topics.1wk=family-candle-1wk
+family.output.topics.1mo=family-candle-1mo
+
+# Trading signals output
+trading.signals.output.topic=trading-signals
+
+# ============================================================================
+# SCRIPFINDER API CONFIGURATION
+# ============================================================================
+scripfinder.api.base-url=http://13.203.60.173:8102
+scripfinder.api.timeout.ms=3000
+
+# ============================================================================
+# TIMEFRAME AGGREGATOR CONFIGURATION
+# ============================================================================
+timeframe.aggregator.enabled=true
 
 # Windowing configuration (grace period for late-arriving data)
 # OPTIMIZED FOR LIVE DATA: Low latency with 2s grace period
