--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ server.port=8081
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
 spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.streams.application-id=unified-market-processor
-spring.kafka.streams.client-id=streamingcandle
+spring.kafka.streams.application-id=unified-family-processor-v1
+spring.kafka.streams.client-id=streamingcandle-family
 spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # Serdes
@@ -20,8 +20,8 @@ spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serial
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 
-# Offset reset - consume from rdtest (skip old problematic data)
-spring.kafka.streams.properties.auto.offset.reset=latest
+# Offset reset - consume from EARLIEST for testing with existing data
+spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
