--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,79 +1,77 @@
-# DEFAULT PROFILE = PRODUCTION
-# Default to replay profile unless overridden
+# ============================================================================
+# STREAMINGCANDLE - END-TO-END PIPELINE CONFIGURATION
+# ============================================================================
+# Combined: NEW family candle pipeline + EXISTING strategy modules
+
 spring.profiles.default=production
-
 spring.application.name=streamingcandle
-server.port=8081
-
-
+server.port=${SERVER_PORT:8081}
 
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.streams.application-id=unified-family-processor-v1
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:13.203.60.173:9094}
+spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
 spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
-spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
+spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model,com.kotsin.consumer.domain.model
 
 # Offset reset - consume from EARLIEST for testing with existing data
 spring.kafka.streams.properties.auto.offset.reset=earliest
 
-# Processing guarantee (at_least_once or exactly_once_v2)
+# Processing guarantee
 spring.kafka.streams.properties.processing.guarantee=at_least_once
 spring.kafka.streams.properties.replication.factor=1
 
 # Performance tuning
 spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
-spring.kafka.streams.properties.num.stream.threads=1
+spring.kafka.streams.properties.num.stream.threads=2
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
-spring.kafka.streams.properties.request.timeout.ms=40000
-spring.kafka.streams.properties.retry.backoff.ms=100
-spring.kafka.streams.properties.reconnect.backoff.ms=50
-spring.kafka.streams.properties.linger.ms=5
-spring.kafka.streams.properties.batch.size=1024
-spring.kafka.streams.properties.buffer.memory=33554432
-
-# Topology optimization
-spring.kafka.streams.properties.topology.optimization=all
 
 # Exception handlers - skip bad records instead of crashing
 spring.kafka.streams.properties.default.deserialization.exception.handler=org.apache.kafka.streams.errors.LogAndContinueExceptionHandler
 spring.kafka.streams.properties.default.production.exception.handler=org.apache.kafka.streams.errors.LogAndContinueProductionExceptionHandler
 
-# Producer timestamp type
-spring.kafka.streams.properties.producer.message.timestamp.type=CreateTime
+# ============================================================================
+# STAGE 1: INPUT TOPICS (Raw Data Sources)
+# ============================================================================
+input.topic.ticks=forwardtesting-data
+input.topic.orderbook=Orderbook
+input.topic.oi=OpenInterest
 
 # ============================================================================
-# UNIFIED MARKET DATA PROCESSOR CONFIGURATION
+# STAGE 2: NEW UNIFIED INSTRUMENT CANDLE PROCESSOR
 # ============================================================================
-# Input topics
-unified.input.topic.ticks=forwardtesting-data
-unified.input.topic.oi=OpenInterest
-unified.input.topic.orderbook=Orderbook
-
-# Output topics
-unified.output.topic.instrument=instrument-candle-1m
-
-# Unified Processor settings
-unified.window.grace.seconds=5
+# Joins tick + orderbook + OI into InstrumentCandle
 unified.processor.enabled=true
+unified.input.topic.ticks=forwardtesting-data
+unified.input.topic.orderbook=Orderbook
+unified.input.topic.oi=OpenInterest
+unified.output.topic.instrument=instrument-candle-1m
+unified.window.grace.seconds=5
 
 # ============================================================================
-# FAMILY CANDLE PROCESSOR CONFIGURATION
+# STAGE 3: FAMILY CANDLE PROCESSOR
 # ============================================================================
+# Groups instruments into family candles
+family.candle.processor.enabled=true
 family.candle.window.grace.seconds=5
 family.candle.cache.ttl.hours=24
-family.cache.ttl.hours=24
 family.cache.refresh.on.miss=true
 
-# Family candle output topics (12 timeframes)
+# ============================================================================
+# STAGE 4: TIMEFRAME AGGREGATOR
+# ============================================================================
+# Aggregates 1m -> higher timeframes
+timeframe.aggregator.enabled=true
+
+# Family candle output topics
 family.output.topics.1m=family-candle-1m
 family.output.topics.2m=family-candle-2m
 family.output.topics.3m=family-candle-3m
@@ -84,55 +82,36 @@ family.output.topics.1h=family-candle-1h
 family.output.topics.2h=family-candle-2h
 family.output.topics.4h=family-candle-4h
 family.output.topics.1d=family-candle-1d
-family.output.topics.1wk=family-candle-1wk
-family.output.topics.1mo=family-candle-1mo
-
-# Trading signals output
-trading.signals.output.topic=trading-signals
 
 # ============================================================================
-# SCRIPFINDER API CONFIGURATION
+# LEGACY PIPELINE (PARALLEL - for backward compatibility during migration)
 # ============================================================================
-scripfinder.api.base-url=http://13.203.60.173:8102
-scripfinder.api.timeout.ms=3000
 
-# ============================================================================
-# TIMEFRAME AGGREGATOR CONFIGURATION
-# ============================================================================
-timeframe.aggregator.enabled=true
-
-# Windowing configuration (grace period for late-arriving data)
-# OPTIMIZED FOR LIVE DATA: Low latency with 2s grace period
+# LEGACY STAGE 1: Candlestick Processor
 candles.window.grace.seconds.1m=2
 candles.window.grace.seconds.multi=2
-
-# Testing: enable to process only a single instrument (by Token)
 candles.filter.enabled=false
 candles.filter.token=123257
 
-# VPIN configuration (dynamic)
+# VPIN configuration
 candles.vpin.initial.bucket.size=10000.0
 candles.vpin.adaptive.alpha=0.05
 candles.vpin.max.buckets=50
 
-# Imbalance thresholds and EWMA (adaptive)
+# Imbalance thresholds
 candles.imbalance.ewma.alpha=0.1
 candles.imbalance.initial.vib=1000.0
 candles.imbalance.initial.dib=100000.0
 candles.imbalance.initial.trb=10.0
 candles.imbalance.initial.vrb=5000.0
-
-# Trade classification thresholds
 candles.classify.min.absolute=0.01
 candles.classify.bps=0.0001
 candles.classify.spread.multiplier=0.15
-
-# Tick sizes
 candles.ticksize.default=0.05
 candles.ticksize.derivatives=0.05
 candles.imbalance.q.zscore=1.645
 
-# Orderbook filters and windowing
+# LEGACY STAGE 2: Orderbook Processor
 orderbook.filter.enabled=false
 orderbook.filter.token=123257
 orderbook.window.grace.seconds.1m=5
@@ -145,173 +124,71 @@ orderbook.lambda.calc.frequency=5
 orderbook.lambda.ofi.epsilon=1.0
 orderbook.spoof.price.epsilon.ticks=1.0
 
-# Open Interest (options) filters and windowing
+# LEGACY STAGE 3: OI Processor
 oi.filter.enabled=false
 oi.filter.token=123257
 oi.window.grace.seconds.1m=5
 oi.window.grace.seconds.multi=10
-oi.value.scale=1.0
-oi.scale.use.lots=false
-
-# MongoDB
-spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
-
-# Used for validation only
-stream.outputs.candles.1m=candle-complete-1m
 
 # ============================================================================
-# UNIFIED CANDLE PROCESSOR CONFIGURATION
+# STRATEGY MODULES (Consumer from legacy unified-candle-* topics)
 # ============================================================================
-unified.enabled=true
-unified.window.grace.seconds=10
-unified.input.candle.prefix=candle-ohlcv-
-unified.input.orderbook.prefix=orderbook-signals-
-unified.input.oi.prefix=oi-metrics-
-unified.output.prefix=unified-candle-
-unified.timeframes=1m,2m,3m,5m,15m,30m
 
-# ============================================================================
-# VCP (Volume Cluster Pivot) CONFIGURATION
-# ============================================================================
-vcp.enabled=true
-vcp.input.prefix=unified-candle-
-vcp.output.signals.prefix=vcp-signals-
-vcp.output.combined=vcp-combined
-
-# Volume profile parameters
-vcp.price-bin-size=0.0005
-vcp.lookback-5m=48
-vcp.lookback-15m=32
-vcp.lookback-30m=24
-
-# Cluster detection
-vcp.min-cluster-strength=0.02
-vcp.max-clusters=5
-vcp.peak-threshold-sigma=0.5
-
-# Order book validation
-vcp.ob-validation-radius=0.005
-vcp.ob-validation-strong=1.5
-vcp.ob-validation-weak=0.5
-
-# OI adjustment
-vcp.oi-adjustment-cap=0.5
-vcp.oi-lookback=20
-
-# Proximity calculation
-vcp.proximity-decay-constant=0.005
-vcp.spread-factor-multiplier=10.0
-vcp.max-relevant-distance=0.02
-
-# Penetration difficulty (Kyle's Lambda)
-vcp.breakout-volume-fraction=0.3
-vcp.high-difficulty-atr-multiple=1.0
-
-# Multi-timeframe weights
-vcp.weight-5m=0.50
-vcp.weight-15m=0.30
-vcp.weight-30m=0.20
-
-# Scoring
-vcp.ofi-modifier-strength=0.2
-vcp.bias-epsilon=0.001
-vcp.atr-period=14
-vcp.default-atr-fraction=0.01
-
-# ============================================================================
-# IPU (Institutional Participation & Urgency) CONFIGURATION
-# ============================================================================
+# IPU Processor (Institutional Participation & Urgency)
 ipu.enabled=true
-ipu.input.prefix=unified-candle-
-ipu.output.signals.prefix=ipu-signals-
-ipu.lookback=20
+ipu.exhaustion.threshold=0.7
 
-# Volume parameters
-ipu.volume-sma-period=20
-ipu.volume-scale-factor=3.0
+# VCP Processor (Volume Cluster Profile)
+vcp.enabled=true
+vcp.cluster.min.volume.ratio=1.5
 
-# Price efficiency
-ipu.efficiency-wick-penalty-max=0.30
+# REGIME PROCESSOR (Index and Security)
+regime.enabled=true
+regime.index.smoothing=0.1
+regime.security.ema.fast=8
+regime.security.ema.slow=21
 
-# Order flow
-ipu.ofi-scale-factor=2.0
-ipu.depth-imbalance-threshold=0.5
-ipu.flow-agreement-bonus=1.3
+# FMA PROCESSOR (Final Magnitude Assembly)
+fma.enabled=true
+fma.cache.ttl.ms=300000
 
-# Kyle's Lambda
-ipu.lambda-boost-max=0.3
-ipu.lambda-scale=0.5
-
-# Momentum
-ipu.momentum-lookback=3
-ipu.acceleration-threshold=0.25
-ipu.slope-clamp=1.0
-ipu.exhaustion-decline-threshold=0.8
-ipu.exhaustion-volume-decline=0.7
-ipu.exhaustion-wick-threshold=0.4
-
-# Urgency
-ipu.tick-density-scale=2.0
-ipu.momentum-atr-scale=1.5
-ipu.vol-acceleration-threshold=0.5
-ipu.accelerating-urgency-boost=1.15
-ipu.decelerating-urgency-penalty=0.90
-
-# X-Factor thresholds
-ipu.xfactor-vol-threshold=0.65
-ipu.xfactor-efficiency-threshold=0.35
-ipu.xfactor-flow-threshold=0.6
-ipu.xfactor-direction-threshold=0.75
-ipu.xfactor-momentum-threshold=0.5
-ipu.xfactor-oi-boost=1.2
-ipu.xfactor-oi-threshold=0.5
-
-# Final score modifiers
-ipu.momentum-modifier-strength=0.15
-ipu.urgency-modifier-strength=0.15
-ipu.xfactor-modifier-strength=0.25
-ipu.exhaustion-penalty-strength=0.20
-
-# Filters
-ipu.min-volume-threshold=1000
-ipu.min-depth-threshold=500
-ipu.opening-range-minutes=30
-ipu.news-spike-vol-threshold=8.0
-ipu.gap-threshold-atr=1.0
-
-# Multi-timeframe weights
-ipu.mtf-weight-5m=0.40
-ipu.mtf-weight-15m=0.35
-ipu.mtf-weight-30m=0.25
-
-# Direction voting weights
-ipu.price-direction-weight=1.0
-ipu.flow-direction-weight=1.0
-ipu.ofi-direction-weight=0.8
-ipu.depth-direction-weight=0.7
-ipu.momentum-direction-weight=1.2
+# TRADING SIGNAL PROCESSOR
+signal.enabled=true
+signal.cache.ttl.ms=120000
 
 # ============================================================================
-# TRADING SIGNAL CONFIGURATION
+# CURATED SIGNALS (High-Quality Filtered Signals)
 # ============================================================================
-trading.enabled=true
-trading.input.vcp=vcp-combined
-trading.input.ipu=ipu-signals-5m
-trading.output=trading-signals
+curated.enabled=true
+curated.min.magnitude=0.6
+curated.min.confirmation.count=3
+curated.output.topic=curated-trading-signals
 
 # ============================================================================
-# LOGGING CONFIGURATION (Issue #13 Fix)
+# OUTPUT TOPICS
 # ============================================================================
-# Root log level
+trading.signals.output.topic=trading-signals
+curated.signals.output.topic=curated-trading-signals
+
+# ============================================================================
+# SCRIPFINDER API CONFIGURATION
+# ============================================================================
+scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://13.203.60.173:8102}
+scripfinder.api.timeout.ms=${SCRIPFINDER_TIMEOUT_MS:3000}
+
+# ============================================================================
+# LOGGING
+# ============================================================================
 logging.level.root=INFO
-
-# Application logs
 logging.level.com.kotsin.consumer=INFO
+logging.level.com.kotsin.consumer.infrastructure.kafka=DEBUG
+logging.level.com.kotsin.consumer.domain.service=DEBUG
+logging.level.com.kotsin.consumer.processor=INFO
+logging.level.com.kotsin.consumer.regime=INFO
+logging.level.com.kotsin.consumer.signal=INFO
+logging.level.com.kotsin.consumer.capital=INFO
+logging.level.com.kotsin.consumer.curated=DEBUG
+logging.level.org.apache.kafka=WARN
 
-# Kafka Streams (reduce noise)
-logging.level.org.apache.kafka.streams=WARN
-logging.level.org.springframework.kafka=WARN
-
-# DEBUG only for specific troubleshooting (comment out in production)
-# logging.level.com.kotsin.consumer.service.CandleEmissionService=DEBUG
-# logging.level.com.kotsin.consumer.service.InstrumentStateManager=DEBUG
+# Pattern with timestamp
+logging.pattern.console=%d{HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n
