--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -175,6 +175,56 @@ curated.signals.output.topic=curated-trading-signals
 # ============================================================================
 scripfinder.api.base-url=${SCRIPFINDER_API_URL:http://13.203.60.173:8102}
 scripfinder.api.timeout.ms=${SCRIPFINDER_TIMEOUT_MS:3000}
+scripfinder.api.circuit-breaker.failure-threshold=5
+scripfinder.api.circuit-breaker.timeout-ms=60000
+
+# ============================================================================
+# INSTRUMENT CONFIGURATION (Externalized from hardcoded values)
+# ============================================================================
+instrument.volume.equity=1000000
+instrument.volume.derivatives=5000000
+instrument.volume.index=10000000
+instrument.tick-size.cash=0.05
+instrument.tick-size.derivatives=0.05
+instrument.trade-classification.min-absolute=0.01
+instrument.trade-classification.basis-points=0.0001
+instrument.trade-classification.spread-multiplier=0.15
+
+# ============================================================================
+# CALCULATOR CONFIGURATION (All thresholds and algorithm parameters)
+# ============================================================================
+# VPIN Configuration
+calculator.vpin.buckets-per-day=50
+calculator.vpin.max-buckets=50
+calculator.vpin.min-bucket-size=100.0
+calculator.vpin.ewma-alpha=0.05
+
+# OI Signal Detection
+calculator.oi-signal.price-threshold=0.1
+calculator.oi-signal.oi-threshold=2.0
+calculator.oi-signal.option-oi-min-change=1000
+
+# Futures Buildup Detection
+calculator.futures-buildup.price-change-threshold=0.1
+calculator.futures-buildup.oi-change-threshold=1.0
+
+# Orderbook Microstructure
+calculator.orderbook.lambda-window-size=100
+calculator.orderbook.lambda-calc-frequency=20
+calculator.orderbook.lambda-min-observations=10
+calculator.orderbook.iceberg-history-size=20
+calculator.orderbook.iceberg-cv-threshold=0.1
+calculator.orderbook.iceberg-min-size=1000
+calculator.orderbook.spoof-duration-threshold-ms=5000
+calculator.orderbook.spoof-size-threshold=0.3
+
+# Imbalance Bars
+calculator.imbalance-bar.ewma-alpha=0.1
+calculator.imbalance-bar.init-volume-imbalance=1000.0
+calculator.imbalance-bar.init-dollar-imbalance=100000.0
+calculator.imbalance-bar.init-tick-runs=10.0
+calculator.imbalance-bar.init-volume-runs=5000.0
+calculator.imbalance-bar.z-score-threshold=1.645
 
 # ============================================================================
 # LOGGING
