--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,54 +84,7 @@ family.output.topics.4h=family-candle-4h
 family.output.topics.1d=family-candle-1d
 
 # ============================================================================
-# LEGACY PIPELINE (PARALLEL - for backward compatibility during migration)
-# ============================================================================
-
-# LEGACY STAGE 1: Candlestick Processor
-candles.window.grace.seconds.1m=2
-candles.window.grace.seconds.multi=2
-candles.filter.enabled=false
-candles.filter.token=123257
-
-# VPIN configuration
-candles.vpin.initial.bucket.size=10000.0
-candles.vpin.adaptive.alpha=0.05
-candles.vpin.max.buckets=50
-
-# Imbalance thresholds
-candles.imbalance.ewma.alpha=0.1
-candles.imbalance.initial.vib=1000.0
-candles.imbalance.initial.dib=100000.0
-candles.imbalance.initial.trb=10.0
-candles.imbalance.initial.vrb=5000.0
-candles.classify.min.absolute=0.01
-candles.classify.bps=0.0001
-candles.classify.spread.multiplier=0.15
-candles.ticksize.default=0.05
-candles.ticksize.derivatives=0.05
-candles.imbalance.q.zscore=1.645
-
-# LEGACY STAGE 2: Orderbook Processor
-orderbook.filter.enabled=false
-orderbook.filter.token=123257
-orderbook.window.grace.seconds.1m=5
-orderbook.window.grace.seconds.multi=10
-orderbook.ticksize=0.05
-orderbook.spoof.size.threshold.ratio=0.3
-orderbook.spoof.confirmation.snapshots=2
-orderbook.lambda.min.observations=10
-orderbook.lambda.calc.frequency=5
-orderbook.lambda.ofi.epsilon=1.0
-orderbook.spoof.price.epsilon.ticks=1.0
-
-# LEGACY STAGE 3: OI Processor
-oi.filter.enabled=false
-oi.filter.token=123257
-oi.window.grace.seconds.1m=5
-oi.window.grace.seconds.multi=10
-
-# ============================================================================
-# STRATEGY MODULES (Consumer from legacy unified-candle-* topics)
+# STRATEGY MODULES (Consume from family-candle-* topics)
 # ============================================================================
 
 # IPU Processor (Institutional Participation & Urgency)
