--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,8 +3,9 @@
 
 # Kafka Configuration (Production)
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
-spring.kafka.streams.application-id=unified-market-processor-prod1
-spring.kafka.streams.properties.auto.offset.reset=latest
+# Changed to new unique ID for fresh consumer group + earliest for replay
+spring.kafka.streams.application-id=unified-market-processor-replay-20251228
+spring.kafka.streams.properties.auto.offset.reset=earliest
 spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
 
 # Processing Configuration (Production - Optimized)
