--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,10 +3,13 @@
 
 # Kafka Configuration (Production)
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS}
-# Changed to new unique ID for fresh consumer group + earliest for replay
-spring.kafka.streams.application-id=unified-market-processor-replay-20251228
+spring.kafka.streams.application-id=unified-market-processor-prod
 spring.kafka.streams.properties.auto.offset.reset=earliest
 spring.kafka.streams.state-dir=/var/lib/kafka-streams/streamingcandle
+
+# APP-ID PREFIX - Change this to replay data with new consumer groups
+# Set to empty string "" for normal production (use existing offsets)
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251228-}
 
 # Processing Configuration (Production - Optimized)
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
