--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,13 @@ server.port=${SERVER_PORT:8081}
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
 spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:13.203.60.173:9094}
-spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-replay-20251228}
+spring.kafka.streams.application-id=${KAFKA_APP_ID:unified-family-processor-v2}
 spring.kafka.streams.client-id=streamingcandle-family
 spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
+
+# APP-ID PREFIX - Change this to replay data from earliest with new consumer groups
+# Example: "replay-20251228-" creates groups like "replay-20251228-unified-instrument-candle-processor"
+kafka.streams.app-id-prefix=${KAFKA_APP_ID_PREFIX:replay-20251228-}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
