--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -122,6 +122,15 @@ curated.min.confirmation.count=3
 curated.output.topic=curated-trading-signals
 
 # ============================================================================
+# MTIS PROCESSOR (Multi-Timeframe Intelligence Score)
+# ============================================================================
+mtis.processor.enabled=true
+mtis.processor.output.topic=family-score
+mtis.producer.batch.size=16384
+mtis.producer.linger.ms=5
+mtis.producer.buffer.memory=33554432
+
+# ============================================================================
 # OUTPUT TOPICS
 # ============================================================================
 trading.signals.output.topic=trading-signals
@@ -195,6 +204,7 @@ logging.level.com.kotsin.consumer.regime=INFO
 logging.level.com.kotsin.consumer.signal=INFO
 logging.level.com.kotsin.consumer.capital=INFO
 logging.level.com.kotsin.consumer.curated=DEBUG
+logging.level.com.kotsin.consumer.score=INFO
 logging.level.org.apache.kafka=WARN
 
 # Pattern with timestamp
